# mana-agent

./: .env.example  .gitignore  AGENTS.md  AI coding project.docx  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT_DIAGRAM.md  README.md  README.md.bak  SECURITY.md  TODO.md  install.sh  pyproject.toml  requirements.txt
.github/scripts/: build_release_notes.py
.github/workflows/: ci.yml  eval-regression.yml  release.yml
.mana_cache/: describe_cache.json
.mana_llm_logs/: 2026-02-21-mana-agent-runs.jsonl  2026-02-23-mana-agent-runs.jsonl
dashboard/: app.py
docs/: 04-commands.md  05-configuration.md  06-workflows.md  08-architecture.md  09-agent-behavior.md  13-tool-system.md  15-development.md  20-codex-integration.md  analyze.md  coding-agent-language-tooling.md  coding-flows.md  debugging.md  goal-profiles.md  multi-agent-routing.md  optional-deps.md  project_structure_analysis.json  project_structure_analysis.md
docs/evals/: artifacts.md  ci-gate.md  overview.md  replay.md  scoring.md  suites.md
evals/baselines/: routing-smoke.json
evals/suites/: routing-smoke.yaml
patch/: ask_agent.patch
src/: IMPROVEMENT_TODO.md
src/mana_agent/: __init__.py
src/mana_agent/analysis/: models.py
src/mana_agent/api/: __init__.py  app.py  exceptions.py
src/mana_agent/cli/: __init__.py  chat_ui.py  events.py  fullscreen_chat.py  renderers.py
src/mana_analyzer/: __init__.py
tests/: conftest.py  test_agent_work_queue.py  test_api_analyze.py  test_apply_patch_fallback_chain.py  test_apply_patch_json_only.py  test_ask_agent.py  test_ask_service.py  test_ask_service_fallback.py  test_auto_chat.py  test_chat_background_index.py  test_chat_console_logging.py  test_chat_first_configuration.py  test_chat_planning_mode.py  test_chat_ui_events_tokens.py  test_checks.py  test_chunker.py  test_cli_answer_extract.py  test_cli_flow.py  test_cli_smoke.py  test_cli_ux_helpers.py  test_codex_integration.py  test_codex_runtime.py  test_coding_agent.py  test_coding_memory_service.py  test_coding_todo_service.py  test_coding_tool_system.py  test_dependency_service.py  test_describe_service.py  test_documents.py  test_gate_command.py  test_html_output.py  test_index_discovery.py  test_index_incremental.py  test_llm_analyze_chain.py  test_llm_analyze_service.py  test_llm_compatibility.py  test_llm_logging.py  test_logging_setup.py  test_multi_agent_core.py  test_multi_parser.py  (+18 more)
tests/commands/: test_analyze_slash_command.py
tests/connectors/: test_email_core.py
tests/evals/: test_eval_lab.py
tests/gateway/: test_chat_gateway.py  test_lane_coordinator.py
tests/integration/: test_chat_analyze_command.py
tests/parsers/: test_parser_adapters.py
(+201 files in other folders)
