[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mana-analyzer"
version = "0.1.0"
description = "AI-powered Python code analyzer CLI"
readme = "README.md"
requires-python = ">=3.10,<=3.14.3"
authors = [{ name = "mana-analyzer" }]
dependencies = [
  "typer",
  "rich",
  "pydantic",
  "pydantic-settings",
  "python-dotenv",
  "langchain",
  "openai",
  "faiss-cpu",
  "safety",
  "langchain-openai",
  "langchain-community",
  "redis",
  "rq"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-mock>=3.14,<4.0",
]

[project.scripts]
mana-analyzer = "mana_analyzer.commands.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
